# Exoplanet-Transit-Lightcurve-Reduction

./: .gitignore  ADR.md  CLAUDE.md  ExoplanetLightcurve.py  README.md  REQUIREMENTS.md  SPECS.md  TODO.md  pyproject.toml
.claude/docs/: ADR.md  REQUIREMENTS.md  RUN_REPORT.md  SPECS.md  TODO.md
.github/workflows/: ci.yml
configs/: hatp19b.toml  tres5b.toml  wasp52b.toml
exotransit/: __init__.py  calibration.py  cli.py  config.py  io_fits.py  lightcurve.py  outputs.py  photometry.py  pipeline.py  planet.py  plots.py  timebase.py  tracking.py
src/exoplanet_lightcurve/: ExoplanetLightcurve.py  exo_input_values.py
tests/: conftest.py  test_acceptance.py  test_calibration.py  test_config.py  test_lightcurve.py  test_outputs.py  test_photometry.py  test_planet.py  test_timebase.py  test_tracking.py  test_webapp.py
webapp/: __init__.py
webapp/client/: index.html  package-lock.json  package.json  vite.config.ts
webapp/client/src/: App.tsx  FrameViewer.tsx  PreviewStep.tsx  StarsStep.tsx  api.ts  main.tsx  steps.tsx  theme.css
webapp/server/: __init__.py  archive.py  configgen.py  growth.py  main.py  preview.py  rendering.py  sessions.py
