[project]
name = "exotransit"
version = "0.1.0"
description = "Differential aperture-photometry pipeline for transiting hot Jupiters (refactor of the bachelor-thesis analysis code)"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
requires-python = ">=3.13"
dependencies = [
    "numpy",
    "matplotlib",
    "astropy",
    "photutils",
    "scikit-image", # ADR-0004 (auto tracking, P1) — pinned now so the API is available
]

[project.scripts]
exotransit = "exotransit.cli:main"

[dependency-groups]
dev = ["pytest", "ruff", "mypy"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["exotransit"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
extend-select = ["I"] # import sorting

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
